CSS fixes to nav buttons and footer z-index.

--- a/scss/master.scss
+++ b/scss/master.scss
@@ -84,5 +84,6 @@ footer {
     border-top: dotted 2px darkgray;
     padding: 16px 10px;
     text-align: center;
+    z-index: 5;
 }
 
